feat(auth): remove `auth-client` package and update authentication system
- Removed `auth-client` for better maintainability.
- Integrated OpenAPI with improved configuration (`disableDefaultReference` enabled).
- Updated `docker-compose.override.yaml` to include container naming and optimized routing.
- Enhanced `traefik` configurations for `postgrest` proxying and middleware adjustments.
- Added schema reloading event trigger in PostgreSQL setup.
- Introduced `scalar/nextjs-api-reference` for dynamic API reference handling in `studio`.
- Updated `turbo.json` to add `API_URL` as a global environment variable.
- Updated dependencies in `pnpm-lock.yaml` to reflect new integrations and library versions.

BREAKING CHANGE:
- Removed `auth-client`, requiring migrations to directly use `better-auth`.
- Adjusted API paths and updated CORS origins.

--- a/apps/studio/tsconfig.json
+++ b/apps/studio/tsconfig.json
@@ -1,23 +1,17 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": [
-    "@opstd/tsconfig/nextjs.json"
-  ],
-  "compilerOptions": {
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "@opstd/ui/*": [
-        "../../packages/studio-ui/src/*"
-      ]
-    }
-  },
-  "include": [
-    "../../packages/tsconfig/../../node_modules/.pnpm/@tsconfig+next@2.0.3/node_modules/@tsconfig/next/next-env.d.ts",
-    "../../packages/tsconfig/../../node_modules/.pnpm/@tsconfig+next@2.0.3/node_modules/@tsconfig/next/**/*.ts",
-    "../../packages/tsconfig/../../node_modules/.pnpm/@tsconfig+next@2.0.3/node_modules/@tsconfig/next/**/*.tsx",
-    "../../packages/tsconfig/../../node_modules/.pnpm/@tsconfig+next@2.0.3/node_modules/@tsconfig/next/.next/types/**/*.ts",
-    ".next/types/**/*.ts"
-  ]
+	"$schema": "https://json.schemastore.org/tsconfig",
+	"extends": ["@opstd/tsconfig/nextjs.json"],
+	"compilerOptions": {
+		"paths": {
+			"@/*": ["./src/*"],
+			"@opstd/ui/*": ["../../packages/studio-ui/src/*"]
+		}
+	},
+	"include": [
+		"../../packages/tsconfig/../../node_modules/.pnpm/@tsconfig+next@2.0.3/node_modules/@tsconfig/next/next-env.d.ts",
+		"../../packages/tsconfig/../../node_modules/.pnpm/@tsconfig+next@2.0.3/node_modules/@tsconfig/next/**/*.ts",
+		"../../packages/tsconfig/../../node_modules/.pnpm/@tsconfig+next@2.0.3/node_modules/@tsconfig/next/**/*.tsx",
+		"../../packages/tsconfig/../../node_modules/.pnpm/@tsconfig+next@2.0.3/node_modules/@tsconfig/next/.next/types/**/*.ts",
+		".next/types/**/*.ts"
+	]
 }
