--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -13,6 +13,7 @@
 		"@opstd/db": "workspace:*",
 		"@opstd/env-validator": "workspace:*",
 		"@opstd/ui": "workspace:*",
+		"@scalar/nextjs-api-reference": "^0.7.7",
 		"drizzle-orm": "^0.41.0",
 		"lucide-react": "^0.475.0",
 		"next": "15.2.4",
@@ -23,6 +24,7 @@
 	},
 	"devDependencies": {
 		"@opstd/tsconfig": "workspace:*",
+		"@scalar/types": "^0.1.6",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
 		"@types/react": "^19",
