feat(env-validator): add unit tests, custom schemas, README, and vitest config
- Introduced unit tests for `EnvValidator` covering validation, custom error handling, & prefixes.
- Added README for usage, examples, and API documentation.
- Configured Vitest for testing with coverage support.
- Enhanced package.json scripts with `lint`, `test`, and coverage commands.
- Updated dependencies with `zod`, `vitest`, and `biome`.

BREAKING CHANGE: Revised package scripts and configuration for testing and environment validation.

Refs #123

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
 	"name": "opstdio",
 	"private": true,
-	"workspaces": ["apps/*", "packages/*"],
+	"workspaces": [
+		"apps/*",
+		"packages/*"
+	],
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
@@ -47,6 +50,12 @@
 		"typescript": "^5.8.2"
 	},
 	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome", "core-js-pure", "esbuild", "sharp"]
+		"onlyBuiltDependencies": [
+			"@biomejs/biome",
+			"core-js",
+			"core-js-pure",
+			"esbuild",
+			"sharp"
+		]
 	}
 }
