--- a/packages/env-validator/package.json
+++ b/packages/env-validator/package.json
@@ -17,10 +17,14 @@
 		"build": "tsup src/index.ts src/config.ts --format esm,cjs --dts",
 		"dev": "tsup src/index.ts src/config.ts --watch --format esm,cjs --dts",
 		"typecheck": "tsc --noEmit",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:coverage": "vitest run --coverage",
+		"lint": "biome check src",
+		"lint:fix": "biome check src --apply"
 	},
-	"keywords": [],
-	"author": "",
+	"keywords": ["environment", "validation", "zod", "typescript"],
+	"author": "OPSTD Team",
 	"license": "ISC",
 	"packageManager": "pnpm@10.4.1",
 	"dependencies": {
@@ -31,9 +35,12 @@
 	"devDependencies": {
 		"@opstd/tsconfig": "workspace:*",
 		"@types/node": "^22.0.0",
+		"@vitest/coverage-v8": "^1.6.0",
+		"biome": "^0.3.3",
 		"tsup": "^8.4.0",
 		"tsx": "^4.19.3",
-		"typescript": "^5.8.2"
+		"typescript": "^5.8.2",
+		"vitest": "^1.6.0"
 	},
 	"tsup": {
 		"entry": ["src/index.ts", "src/config.ts"],
