--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -24,7 +24,8 @@
 		"better-auth-harmony": "^1.2.4",
 		"drizzle-orm": "^0.41.0",
 		"hono": "^4.7.5",
-		"pg": "^8.14.1"
+		"pg": "^8.14.1",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@opstd/tsconfig": "workspace:*",
