--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,11 +1,31 @@
 {
 	"name": "@opstd/logger",
-	"version": "1.0.0",
-	"private": true,
+	"version": "0.1.0",
+	"description": "Flexible and configurable logging utility for Opstd projects",
 	"type": "module",
-	"main": "./dist/index.js",
-	"module": "./dist/index.js",
-	"types": "./dist/index.d.ts",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"files": ["dist"],
+	"scripts": {
+		"build": "tsc",
+		"clean": "rm -rf dist",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:coverage": "vitest run --coverage",
+		"prepublishOnly": "npm run clean && npm run build && npm run test"
+	},
+	"keywords": ["logger", "logging", "pino", "typescript"],
+	"dependencies": {
+		"pino": "^9.6.0"
+	},
+	"devDependencies": {
+		"@vitest/coverage-v8": "^0.34.6",
+		"pino-logfmt": "^0.1.1",
+		"pino-pretty": "^13.0.0",
+		"typescript": "^5.2.2",
+		"vitest": "^0.34.6",
+		"zod": "^3.24.2"
+	},
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
@@ -13,26 +33,7 @@
 			"require": "./dist/index.js"
 		}
 	},
-	"scripts": {
-		"build": "tsup src/index.ts src/config.ts --format esm,cjs --dts",
-		"dev": "tsup src/index.ts src/config.ts --watch --format esm,cjs --dts",
-		"typecheck": "tsc --noEmit",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"packageManager": "pnpm@10.4.1",
-	"dependencies": {
-		"@types/pino": "^7.0.5",
-		"pino": "^9.6.0",
-		"pino-logfmt": "^0.1.1"
-	},
-	"devDependencies": {
-		"@opstd/tsconfig": "workspace:*",
-		"@types/node": "^22.0.0",
-		"tsup": "^8.4.0",
-		"tsx": "^4.19.3",
-		"typescript": "^5.8.2"
+	"publishConfig": {
+		"access": "public"
 	}
 }
