--- a/packages/logger/tsconfig.json
+++ b/packages/logger/tsconfig.json
@@ -1,13 +1,18 @@
 {
-	"$schema": "https://json.schemastore.org/tsconfig",
-	"extends": ["@opstd/tsconfig/base.json"],
+	"extends": "../tsconfig/base.json",
 	"compilerOptions": {
 		"outDir": "./dist",
-		"module": "ESNext",
+		"rootDir": "./src",
+		"module": "commonjs",
 		"moduleResolution": "node",
-		"allowImportingTsExtensions": true,
-		"allowJs": true,
-		"resolveJsonModule": true
+		"esModuleInterop": true,
+		"strict": true,
+		"skipLibCheck": true,
+		"declaration": true,
+		"declarationMap": true,
+		"sourceMap": true,
+		"removeComments": false
 	},
-	"include": ["src/**/*"]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "dist"]
 }
