feat(env-validator): enhance env loading, validation, and logging
- Introduce `pino-pretty` for improved logging output.
- Refactor `EnvValidator` to add robust `.env` file precedence handling.
- Improve schema merging, error handling, and debug logging.
- Normalize and validate environment variable values with fallback defaults.
- Support service-specific prefixes for environment variables.

BREAKING CHANGE: Reworked environment validation logic and improved defaults handling.

--- a/packages/env-validator/package.json
+++ b/packages/env-validator/package.json
@@ -30,7 +30,8 @@
 	"dependencies": {
 		"dotenv": "^16.4.7",
 		"zod": "^3.24.2",
-		"@opstd/logger": "workspace:*"
+		"@opstd/logger": "workspace:*",
+		"pino-pretty": "^13.0.0"
 	},
 	"devDependencies": {
 		"@opstd/tsconfig": "workspace:*",
