feat(db): enhance database connection handling and logging
- Add robust retry logic and health checks for database initialization
- Improve database connection pool configurations
- Integrate structured logging via `@opstd/logger`
- Introduce graceful shutdown for connection pool
- Improve validation in `env-validator` and align with updated dependencies

BREAKING CHANGE: Initialization and shutdown processes now require explicit handling

--- a/services/db/package.json
+++ b/services/db/package.json
@@ -28,6 +28,7 @@
 	"packageManager": "pnpm@10.4.1",
 	"dependencies": {
 		"@opstd/env-validator": "workspace:*",
+		"@opstd/logger": "workspace:*",
 		"drizzle-orm": "^0.41.0",
 		"pg": "^8.14.1"
 	},
